# metal_scrapper

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: quality.yml
metalScrapper/: Dockerfile  items.csv  items.json  kitco.json  scrapy.cfg
metalScrapper/metalScrapper/: items.py  middlewares.py  pipelines.py  settings.py
metalScrapper/metalScrapper/spiders/: kitco.py  truney.py
