[tool.poetry]
name = "metal-scrapper"
version = "0.1.0"
description = "Scrapper for Taiwanese bullion sellers"
authors = ["CubeVic <victoraguirre.f@gmail.com>"]
readme = "README.md"
packages = [{include = "metal_scrapper"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
